--- a/day-1-drumkit/css/style.css
+++ b/day-1-drumkit/css/style.css
@@ -8,44 +8,57 @@ body {
 }
 
 main {
-  height: 100%;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: no-repeat url('../images/bg_drummer.jpg');
+  width: 100%;
+  height: 100%;
+  background: no-repeat center url("../images/bg_drummer.jpg");
 }
 
 .key-container {
   display: flex;
-  width: 80%;
+  flex-wrap: wrap;
   justify-content: space-evenly;
+  width: 80%;
 }
 
 .key {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100px;
-  width: 100px;
+  margin: 10px;
   padding: 10px;
-  border: 1px solid #fafafa;
+  width: 100px;
+  height: 100px;
+  border: 2px solid rgb(250, 250, 250);
+  border-radius: 2px;
+  background: rgba(51, 51, 51, 0.5);
+  color: rgb(250, 250, 250);
   text-align: center;
-  text-shadow: rgb(255, 204, 0) 1px 0 20px;
-  background: rgba(238, 238, 238, 0.2);
-  color: #fafafa;
+  font-weight: 400;
+  transition: all 0.07s;
+}
+
+.key--playing {
+  border-width: 3px;
+  -webkit-box-shadow: 0 0 17px 0 rgba(243, 65, 79, 1);
+  -moz-box-shadow: 0 0 17px 0 rgba(243, 65, 79, 1);
+  box-shadow: 0 0 17px 0 rgba(243, 65, 79, 1);
+  color: rgb(243, 65, 79);
+  transform: scale(1.1);
 }
 
 .key__name {
   color: inherit;
-  font-family: 'Special Elite', cursive;
   font-size: 4em;
+  font-family: "Special Elite", cursive;
 }
 
 .key__sound {
   color: inherit;
-  font-family: 'Oswald', sans-serif;
-  font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 1px;
+  font-size: 1em;
+  font-family: "Oswald", sans-serif;
 }
