--- a/day-3-cssvars/css/normalize.css
+++ b/day-3-cssvars/css/normalize.css
@@ -10,6 +10,7 @@
 
 html {
   line-height: 1.15; /* 1 */
+
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -30,8 +31,8 @@ body {
  */
 
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
+  font-size: 2em;
 }
 
 /* Grouping content
@@ -43,9 +44,9 @@ h1 {
  */
 
 hr {
+  overflow: visible; /* 2 */
   box-sizing: content-box; /* 1 */
   height: 0; /* 1 */
-  overflow: visible; /* 2 */
 }
 
 /**
@@ -54,8 +55,8 @@ hr {
  */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  font-family: monospace; /* 1 */
 }
 
 /* Text-level semantics
@@ -97,8 +98,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  font-family: monospace; /* 1 */
 }
 
 /**
@@ -116,10 +117,10 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
   position: relative;
   vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
 }
 
 sub {
@@ -154,10 +155,10 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
+  font-size: 100%; /* 1 */
+  font-family: inherit; /* 1 */
+  line-height: 1.15; /* 1 */
 }
 
 /**
@@ -199,8 +200,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
   padding: 0;
+  border-style: none;
 }
 
 /**
@@ -230,11 +231,11 @@ fieldset {
  */
 
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
   display: table; /* 1 */
-  max-width: 100%; /* 1 */
+  box-sizing: border-box; /* 1 */
   padding: 0; /* 3 */
+  max-width: 100%; /* 1 */
+  color: inherit; /* 2 */
   white-space: normal; /* 1 */
 }
 
@@ -280,8 +281,9 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
+
+  -webkit-appearance: textfield; /* 1 */
 }
 
 /**
@@ -298,8 +300,9 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
+
+  -webkit-appearance: button; /* 1 */
 }
 
 /* Interactive
