--- a/day-5-flexpanels/css/main.css
+++ b/day-5-flexpanels/css/main.css
@@ -12,12 +12,12 @@ body {
   box-sizing: inherit;
 }
 
-.panels {
+.f-panels {
   overflow: hidden;
   min-height:100vh;
 }
 
-.panel {
+.f-panels__panel {
   align-items:center;
   background:#6B0F9C;
   background-position:center;
@@ -35,25 +35,22 @@ body {
 }
 
 
-.panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-.panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-.panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-.panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-.panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+.panel--1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
+.panel--2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
+.panel--3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
+.panel--4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
+.panel--5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
-.panel > * {
+.panel__p {
   margin:0;
   width: 100%;
-  transition:transform 0.5s;
-}
-
-.panel p {
   text-transform: uppercase;
   text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
   font-size: 2em;
   font-family: 'Amatic SC', cursive;
+  transition:transform 0.5s;
 }
-.panel p:nth-child(2) {
+.panel__p:nth-child(2) {
   font-size: 4em;
 }
 
