--- a/day-5-flexpanels/css/main.css
+++ b/day-5-flexpanels/css/main.css
@@ -1,9 +1,12 @@
+/* 
+ Document ======================================================================
+ */
 html {
   box-sizing: border-box;
-  background:#ffc600;
+  background: #ffc600;
   font-weight: 200;
   font-size: 20px;
-  font-family:'helvetica neue';
+  font-family: "Helvetica Neue", sans-serif;
 }
 body {
   margin: 0;
@@ -11,19 +14,29 @@ body {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+/* /document */
 
-.f-panels {
+/* 
+Gallery ========================================================================
+*/
+.gallery {
+  display: flex;
   overflow: hidden;
-  min-height:100vh;
+  min-height: 100vh;
 }
 
-.f-panels__panel {
-  align-items:center;
-  background:#6B0F9C;
-  background-position:center;
-  background-size:cover;
-  box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
-  color:white;
+/* Gallery element */
+.gallery__panel {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  background: #6B0F9C;
+  background-position: center;
+  background-size: cover;
+  box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
+  color: white;
   text-align: center;
   font-size: 20px;
   /* Safari transitionend event.propertyName === flex */
@@ -34,26 +47,44 @@ body {
     background 0.2s;
 }
 
+/* Panel elements */
+.panel__p {
+  display: flex;
+  align-items: center;
+  flex: 1 0 auto;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+  text-transform: uppercase;
+  text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
+  font-size: 2em;
+  font-family: 'Amatic SC', cursive;
+  transition: transform 0.5s;
+}
+.panel__p:first-child {
+  transform: translateY(-100%);
+}
+.panel__p:last-child {
+  transform: translateY(100%);
+}
+.panel__p:nth-child(2) {
+  font-size: 4em;
+}
 
+/* Panel modifiers */
 .panel--1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
 .panel--2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
 .panel--3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
 .panel--4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
 .panel--5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
-.panel__p {
-  margin:0;
-  width: 100%;
-  text-transform: uppercase;
-  text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
-  font-size: 2em;
-  font-family: 'Amatic SC', cursive;
-  transition:transform 0.5s;
-}
-.panel__p:nth-child(2) {
-  font-size: 4em;
-}
-
-.panel.open {
+/* Gallery element modifiers */
+.gallery__panel--open {
+  flex: 5;
   font-size:40px;
 }
+.gallery__panel--open .panel__p:first-child,
+.gallery__panel--open .panel__p:last-child {
+  transform: translateY(0);
+}
+/* END Gallety block */
