Day-5: Add images and change font

--- a/day-5-flexpanels/css/main.css
+++ b/day-5-flexpanels/css/main.css
@@ -58,7 +58,7 @@ Gallery ========================================================================
   text-transform: uppercase;
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
   font-size: 2em;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Fredericka the Great', cursive;
   transition: transform 0.5s;
 }
 .panel__p:first-child {
@@ -72,19 +72,19 @@ Gallery ========================================================================
 }
 
 /* Panel modifiers */
-.panel--1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
-.panel--2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-.panel--3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-.panel--4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
-.panel--5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
+.panel--1 { background-image: url(../images/lake.jpg); }
+.panel--2 { background-image: url(../images/ocean.jpg); }
+.panel--3 { background-image: url(../images/space.jpg); }
+.panel--4 { background-image: url(../images/mountains.jpg); }
+.panel--5 { background-image: url(../images/winter.jpeg); }
 
 /* Gallery element modifiers */
 .gallery__panel--open {
   flex: 5;
   font-size:40px;
-}
-.gallery__panel--open .panel__p:first-child,
-.gallery__panel--open .panel__p:last-child {
+} 
+.gallery__panel--active .panel__p:first-child,
+.gallery__panel--active .panel__p:last-child {
   transform: translateY(0);
 }
 /* END Gallety block */
